infra_test_input/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: production

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:

    metadata:
      labels:
        app: user-service

    spec:

      containers:

      - name: user-service

        image: nginx:latest

        ports:
        - containerPort: 8080
