infra_test_input/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:

  selector:
    app: user-service

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
