infra_test_input/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-service-ingress

spec:

  rules:

    - host: users.example.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: user-service

                port:

                  number: 80
